--- a/styles/banner.css
+++ b/styles/banner.css
@@ -33,3 +33,15 @@
     font-size: 14px;
     font-weight: 400;
 }
+
+@media screen and (min-width: 1024px) {
+
+    .banner_titulo {
+        font-size: 36px;
+    }
+
+    .banner_pesquisa {
+        width: 50%;
+        padding: 1.25em;
+    }
+}
