--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -10,7 +10,6 @@
 
 .swiper-slide img {
     width: 100%;
-    margin: 0 1em;
 }
 
 .swiper-button-prev,
@@ -84,3 +83,28 @@
     text-decoration: none;
 }
 
+@media screen and (min-width: 1024px) {
+
+    .carrossel_titulo {
+        font-size: 26px;
+    }
+
+    .swiper-pagination {
+        padding: 2em 0 2em 0;
+    }
+
+    .swiper {
+        width: 60%;
+    }
+
+    .swiper-button-prev,
+    .swiper-button-next {
+        display: block;
+        top: 60%;
+    }
+
+    .card {
+        width: 60%;
+        margin: 2em auto;
+    }
+}
