--- a/styles/contato.css
+++ b/styles/contato.css
@@ -38,7 +38,24 @@
     padding-left: 2em;
 }
 
-footer {
-    background-color: var(--white);
-    padding: 1em;
+@media screen and (min-width: 1024px) {
+    
+    .contato {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .contato_titulo {
+        font-size: 24px;
+    }
+
+    .contato_descricao {
+        margin-right: 1em;
+        width: 40%;
+    }
+
+    .contato_email {
+        width: 40%;
+    }
 }
