--- a/styles/header.css
+++ b/styles/header.css
@@ -50,3 +50,56 @@
     -webkit-text-fill-color: transparent;
     background-clip: text;
 }
+
+.container_titulo {
+    display: none;
+}
+
+.opcoes {
+    display: none;
+}
+
+@media screen and (min-width: 1024px) {
+
+    .container_titulo,
+    .container_titulo-negrito {
+        font-family: var(--font-josefin-sans);
+        font-size: 30px;
+    }
+
+    .container_titulo {
+        font-weight: 400;
+        display: block;
+    }
+
+    .container_titulo-negrito {
+        font-weight: 700;
+    }
+
+    .opcoes {
+        display: flex;
+    }
+
+    .opcoes_item {
+        padding: 0 1em;
+        text-transform: uppercase;
+    }
+
+    .opcoes_link {
+        text-decoration: none;
+        color: var(--black-color)
+    }
+
+    .container_imagem-transparente {
+        display: none;
+    }
+
+    .cabecalho_menu-hamburguer {
+        display: none;
+    }
+
+    .opcoes_botao:checked ~ .lista_menu {
+        display: block;
+        width: auto;
+    }
+}
