--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url(reset.css);
 @import url(header.css);
 @import url(banner.css);
 @import url(carrossel.css);
 @import url(topicos.css);
 @import url(contato.css);
+@import url(rodape.css);
 
 :root {
     --background-color: #EBECEE;
@@ -12,8 +13,12 @@
     --blue-gradient: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --blue-color: #002F52;
     --orange-color: #EB9B00;
+    --black-color: #000000;
+    --graylight-color: #858585;
+    --gray-color: #474646;
 
-    --font-poppins: 'Poppins', sans-serif
+    --font-poppins: 'Poppins', sans-serif;
+    --font-josefin-sans: 'Josefin Sans';
 }
 
 body {
