--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -29,3 +29,18 @@
     text-decoration: none;
     padding: 1em;
 }
+
+@media screen and (min-width: 1024px) {
+
+    .topicos {
+        padding: 2em 4em;
+    }
+
+    .topicos_titulo {
+        font-size: 24px;
+    }
+
+    .topicos_link {
+        font-size: 24px;
+    }
+}
