--- a/styles/banner.css
+++ b/styles/banner.css
@@ -45,3 +45,9 @@
         padding: 1.25em;
     }
 }
+
+@media screen and (min-width: 1728px) {
+    .banner_pesquisa {
+        width: 35%;
+    }
+}
