--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -46,3 +46,14 @@ hr {
         padding-left: 1em;
     }
 }
+
+@media screen and (min-width: 1728px) {
+    .rodape {
+        padding: 3em 15vw;
+    }
+
+    .lista_rodape {
+        border-left: 1px solid var(--graylight-color);
+        padding-left: 1.5em;
+    }
+}
